plugins {
    id 'java'
    id 'org.springframework.boot' version '3.1.0'
    id 'io.spring.dependency-management' version '1.1.0'
}

group = 'com.cdapps'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter:3.1.0'
    implementation 'org.springframework.boot:spring-boot-starter-web:3.1.0'
    implementation 'org.springframework.boot:spring-boot-starter-jdbc:3.0.4'
    implementation 'org.postgresql:postgresql:42.5.4'
    developmentOnly 'org.springframework.boot:spring-boot-devtools:3.0.4'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.1.0'
    testImplementation 'org.springframework.boot:spring-boot-starter-test:3.1.0'
}

tasks.named('test') {
    useJUnitPlatform()
}
